--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="index.html">Features</a></li>
-                            <li><a href="aboutMe.html">Contact</a></li>
+                            <li><a href="aboutUs.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -56,8 +56,8 @@
             <br>
             
             <div class="inner cover">
-                <h1 class="cover-heading">Project CS4550</h1>
-                <p class="lead">Web Development</p>
+                <h1 class="cover-heading">Project CS3200</h1>
+                <p class="lead">Database Design</p>
             </div>
 
             <br>
@@ -103,7 +103,7 @@
 
             <div class="mastfoot">
                 <div class="inner">
-                    <p>Duy Vu @CS4550 Spring 2016</p>
+                    <p>Group7 @CS3200 Spring 2016</p>
                 </div>
             </div>
 
