--- a/public/index.html
+++ b/public/index.html
@@ -70,10 +70,22 @@
                              src="Images/assignment_icon.png"
                              alt="Generic placeholder image" width="140" height="140">
                     </a>
-                    <h2>Assignments</h2>
-                    <p>Including files for the assignments.</p>
+                    <h2>Project Proposal</h2>
+                    <p>The proposal of the project</p>
                     <p><a class="btn btn-default" href="assignment/index.html" role="button">View details &raquo;</a></p>
                     <br><br>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-sm-4">
+                    <a href="Testing/home.html">
+                        <img class="img-circle"
+                             src="Images/testing_icon.png"
+                             alt="Generic placeholder image" width="140" height="140">
+                    </a>
+                    <h2>Project Progess</h2>
+                    <p>Project progress report</p>
+                    <p><a class="btn btn-default" href="Testing/home.html" role="button">View details &raquo;</a></p>
+                    <br>
+                    <br>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-sm-4">
                     <a href="project/index.html">
@@ -84,18 +96,6 @@
                     <h2>Project</h2>
                     <p>Final Project directory <br> (Works In Progress).</p>
                     <p><a class="btn btn-default" href="project/index.html" role="button">View details &raquo;</a></p>
-                    <br>
-                    <br>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-4">
-                    <a href="Testing/home.html">
-                        <img class="img-circle"
-                             src="Images/testing_icon.png"
-                             alt="Generic placeholder image" width="140" height="140">
-                    </a>
-                    <h2>Testing</h2>
-                    <p>Testing directory includings code that have not yet to be pushed</p>
-                    <p><a class="btn btn-default" href="Testing/home.html" role="button">View details &raquo;</a></p>
                     <br>
                     <br>
                 </div><!-- /.col-lg-4 -->
