adding database support

--- a/public/index.html
+++ b/public/index.html
@@ -65,14 +65,14 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <a href="assignment/index.html">
+                    <a href="projectProposal.html">
                         <img class="img-circle"
                              src="Images/assignment_icon.png"
                              alt="Generic placeholder image" width="140" height="140">
                     </a>
                     <h2>Project Proposal</h2>
                     <p>The proposal of the project</p>
-                    <p><a class="btn btn-default" href="assignment/index.html" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" href="projectProposal.html" role="button">View details &raquo;</a></p>
                     <br><br>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-sm-4">
