--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -101,13 +101,13 @@
                                 <div class="container">
                                     <div class="carousel-caption">
 
-                                        <div class="col-sm-6">
-                                            <img class="img-circle"
+                                        <div class="col-sm-4">
+                                            <img class="img-circle carousel-img"
                                                  src="Images/about_me.jpg"
                                                  alt="Generic placeholder image" width="180" height="180">
                                             <h4>Picture of ME ;)</h4>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-sm-8">
                                             <div class="about-me">
                                                 <h2>Group 7</h2>
                                                 <br>
@@ -129,13 +129,13 @@
                             <div class="item">
                                 <div class="container">
                                     <div class="carousel-caption">
-                                        <div class="col-sm-6">
-                                            <img class="img-circle"
+                                        <div class="col-sm-4">
+                                            <img class="img-circle carousel-img"
                                                  src="Images/about_me.jpg"
                                                  alt="Generic placeholder image" width="180" height="180">
                                             <h4>Picture of ME ;)</h4>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-sm-8">
                                             <div class="about-me">
                                                 <h2>Group 7</h2>
                                                 <br>
@@ -156,13 +156,13 @@
                             <div class="item">
                                 <div class="container">
                                     <div class="carousel-caption">
-                                        <div class="col-sm-6">
-                                            <img class="img-circle"
+                                        <div class="col-sm-4">
+                                            <img class="img-circle carousel-img"
                                                  src="Images/about_me.jpg"
                                                  alt="Generic placeholder image" width="180" height="180">
                                             <h4>Picture of ME ;)</h4>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="col-sm-8">
                                             <div class="about-me">
                                                 <h2>Group 7</h2>
                                                 <br>
