--- a/public/projectProposal.html
+++ b/public/projectProposal.html
@@ -43,12 +43,12 @@
 
             <div class="masthead clearfix">
                 <div class="inner">
-                    <h3 class="masthead-brand">Cover</h3>
+                    <a href="index.html"><h3 class="masthead-brand">Cover</h3></a>
                     <nav>
                         <ul class="nav masthead-nav">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="index.html">Features</a></li>
-                            <li class="active"><a href="aboutUs.html">Contact</a></li>
+                            <li class="active">Features</li>
+                            <li><a href="aboutUs.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -64,7 +64,7 @@
 
             <div class="row">
                 <iframe src="https://onedrive.live.com/embed?cid=C32A735EEA584F7A&resid=C32A735EEA584F7A%217656&authkey=AIC6TnOTsn8ueCg&em=2"
-                        width="600" height="400" frameborder="0" scrolling="no"></iframe>
+                        width="700" height="400" frameborder="0" scrolling="no"></iframe>
             </div>
 
 
