--- a/public/projectReport.html
+++ b/public/projectReport.html
@@ -19,6 +19,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/coverPage.css" rel="stylesheet">
+    <link href="css/aboutUs.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><!--script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -41,65 +43,31 @@
 
             <div class="masthead clearfix">
                 <div class="inner">
-                    <h3 class="masthead-brand">Cover</h3>
+                    <a href="index.html"><h3 class="masthead-brand">Cover</h3></a>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="projectProposal.html">Features</a></li>
                             <li><a href="aboutUs.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
-            
-            <br>
-            <br>
-            
+
             <div class="inner cover">
-                <h1 class="cover-heading">Project CS3200</h1>
-                <p class="lead">Database Design</p>
+                <h1 class="cover-heading">Project Report</h1>
             </div>
 
             <br>
             <br>
+            <br>
 
             <div class="row">
-                <div class="col-sm-4">
-                    <a href="projectProposal.html">
-                        <img class="img-circle"
-                             src="Images/assignment_icon.png"
-                             alt="Generic placeholder image" width="140" height="140">
-                    </a>
-                    <h2>The Proposal</h2>
-                    <p>The proposal of the project</p>
-                    <p><a class="btn btn-default" href="projectProposal.html" role="button">View details &raquo;</a></p>
-                    <br><br>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-4">
-                    <a href="projectReport.html">
-                        <img class="img-circle"
-                             src="Images/testing_icon.png"
-                             alt="Generic placeholder image" width="140" height="140">
-                    </a>
-                    <h2>Project Progess</h2>
-                    <p>Project progress report</p>
-                    <p><a class="btn btn-default" href="projectReport.html" role="button">View details &raquo;</a></p>
-                    <br>
-                    <br>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-4">
-                    <a href="project/client/index.html">
-                        <img class="img-circle"
-                             src="Images/project_icon.png"
-                             alt="Generic placeholder image" width="140" height="140">
-                    </a>
-                    <h2>Project</h2>
-                    <p>Final Project directory</p>
-                    <p><a class="btn btn-default" href="project/client/index.html" role="button">View details &raquo;</a></p>
-                    <br>
-                    <br>
-                </div><!-- /.col-lg-4 -->
-            </div><!-- /.row -->
+                <iframe src="https://onedrive.live.com/embed?cid=C32A735EEA584F7A&resid=C32A735EEA584F7A%217673&authkey=AJZLbxP2Gil_w2Q&em=2"
+                        width="700" height="400" frameborder="0" scrolling="no"></iframe>
+                </iframe>
+            </div>
+
 
             <div class="mastfoot">
                 <div class="inner">
