--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -156,22 +156,22 @@
                                     <div class="carousel-caption">
                                         <div class="col-sm-4">
                                             <img class="img-circle carousel-img"
-                                                 src="Images/about_me.jpg"
+                                                 src="Images/NoImage.jpg"
                                                  alt="Generic placeholder image" width="180" height="180">
-                                            <h4>Picture of ME ;)</h4>
+                                            <h4>Like a Boss</h4>
                                         </div>
                                         <div class="col-sm-8">
                                             <div class="about-me">
                                                 <h2>Group 7</h2>
                                                 <br>
                                                 <p>
-                                                    My name is Duy Vu.
+                                                    My name is Nam Luu.
                                                     <br>I am a student at Northeastern University.
                                                     <br>My major is Computer Science
                                                     <br>This is my Third Year in college.
                                                     <br>I hope you enjoy my work on this website.
                                                     <br>Phone Number: XXX-XXX-XXXX
-                                                    <br>Email: vu.du@husky.neu.edu
+                                                    <br>Email: namluu@ccs.neu.edu
                                                 </p>
                                             </div>
                                         </div>
